# faceted

./: .coveragerc  .travis.yml  Examples.ipynb  LICENSE  README.md  facets.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: ci.yaml  tests.yml
ci/: environment-3.7.yml  environment-3.8.yml  environment-3.9.yml  environment-py36.yml  environment.yml
doc/: api.rst  conf.py  environment.yml  examples.rst  index.rst  whats-new.rst  why-faceted.rst
docs/: api.rst  conf.py  examples.rst  index.rst  whats-new.rst
faceted/: __init__.py  _version.py  faceted.py
faceted/examples/: examples.ipynb
faceted/tests/: test_examples.py  test_faceted.py
facets/: __init__.py  facets.py
facets/examples/: Examples.ipynb  examples.ipynb
facets/tests/: test_examples.py  test_facets.py
