[build-system]
requires = ["setuptools>=38.4", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "faceted"
authors = [{name = "Spencer Clark", email = "spencerkclark@gmail.com"}]
license = {file = "LICENSE"}
description = "Figures with precise control over overall width, plot aspect ratio, between-plot spacing, and colorbar dimensions."
classifiers = [
    "Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = ["matplotlib>=1.5", "numpy >= 1.7"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["cartopy", "coveralls", "pytest", "pytest-cov"]
docs = ["cartopy", "cftime", "ipython", "jupyter", "nc-time-axis", "netCDF4", "numpydoc", "pooch", "sphinx", "sphinx-gallery", "sphinx_rtd_theme", "xarray"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Documentation = "https://faceted.readthedocs.io/en/latest/"
Repository = "https://github.com/spencerkclark/faceted.git"

[tool.ruff]
exclude = [
    ".eggs",
    "doc",
    "__init__.py"
]

[tool.ruff.lint]
ignore = [	
	"E731",
	"F401"
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "faceted.faceted.__version__"}
