[wheel]
universal = 1

[metadata]
description-file = README.md

[aliases]
test=pytest

[tool:pytest]
python_files=test_*.py

[versioneer]
VCS = git
style = pep440
versionfile_source = faceted/_version.py
versionfile_build = faceted/_version.py
tag_prefix =
parentdir_prefix = faceted-

[flake8]  # Ignore settings taken from xarray
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    .eggs
    doc
